--- a/BestSpot_WiFi/README
+++ b/BestSpot_WiFi/README
@@ -1,1 +1,1 @@
-Report on finding the best spot in a flat for the Wi-Fi emitter using finite difference method and ray-tracing. The coding was done in python.
+Report for the Ecole Normale Supérieur competitive exam on finding the best spot in a flat for the Wi-Fi emitter using finite difference method and ray-tracing. Code in python.
