--- a/FluidStructureInteractions/README
+++ b/FluidStructureInteractions/README
@@ -1,1 +1,2 @@
 A project on simulating how blood travels through a vessel.
+The phenomena is modeled with added fluid mass within a fixed length of vessel and looking at how it changes the interection between the blood and the lining of the vessel.
